Setup dataset app

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -13,7 +13,7 @@
     <div class="card text-white bg-secondary my-2 py-1 text-center" style="width: 100%">
         <div class="card-body">
             <h1 class="font-weight-light">ML Playground</h1>
-            <p class="text-white m-0">Tool to build ML models for helping offline tracker shifters in monitroing and certifying run reconstruction data.  
+            <p class="text-white m-0">Tool to build ML models for offline tracker shifters in monitroing and certifying run reconstruction data.  
             </p>
         </div>
     </div>
