Add url to Homepage

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="card-deck my-3">
             <div class="card h-50">
-                <div class="btn btn-secondary" onclick="location.href='#'">
+                <div class="btn btn-secondary" onclick="location.href='{% url 'datasets:listdatasets' %}'">
                 <a href="#">
                     <img class="card-img-top embed-responsive-item img" src="{% static "home/img/dataset3.png" %}" alt="Card image cap">
                     <div class="card-body">
