--- a/templates/basepage/menu.html
+++ b/templates/basepage/menu.html
@@ -13,7 +13,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Datasets</a>
+                    <a class="nav-link" href="{% url 'datasets:listdatasets' %}">Datasets</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Models</a>
