--- a/runs/templates/runs/main.html
+++ b/runs/templates/runs/main.html
@@ -1,11 +1,7 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block title %} Runs {% endblock title %}
 
 {% block content %}
-
-<h1> Welcome to the run view</h1>
-{{runs}}
-
+{{ runs | safe }}
 {% endblock content %}
-
