Adding lumisections - first look at views

--- a/runs/templates/runs/main.html
+++ b/runs/templates/runs/main.html
@@ -3,9 +3,5 @@
 {% block title %} Runs {% endblock title %}
 
 {% block content %}
-
-<h1> Welcome to the run view</h1>
-{{runs}}
-
+{{ runs | safe }}
 {% endblock content %}
-
