Change name to list datasets. Change home page. Add table for run Histogram

--- a/listdatasets/templates/listdatasets/listdatasets.html
+++ b/listdatasets/templates/listdatasets/listdatasets.html
@@ -6,7 +6,7 @@ List datasets
 
 {% block style %}
     {% load static %}
-    <link rel="stylesheet" href="{% static "datasets/css/list_table.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "listdatasets/css/list_table.css" %}" type="text/css">
 {% endblock %}
 
 {% block content %}
