--- a/templates/basepage/menu.html
+++ b/templates/basepage/menu.html
@@ -13,13 +13,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'datasets:listdatasets' %}">Datasets</a>
+                    <a class="nav-link" href="{% url 'listdatasets:listdatasets' %}">Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Models</a>
+                    <a class="nav-link" href="#">Model</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reports</a>
+                    <a class="nav-link" href="#">Result</a>
                 </li>
               </ul>
         </div>
