--- a/run_histos/templates/run_histos/main.html
+++ b/run_histos/templates/run_histos/main.html
@@ -9,12 +9,28 @@
     {{ error_message }}
   {% endif %}
 
+  <h2> Choosing Dataset / Variable / Plot type </h2>
+
   <form action="" method="POST" class="ui form">
   {% csrf_token %}
     <div class="field">
-        <label>Histogram</label>
+        <label>Dataset</label>
         <div class="ui selection dropdown">
-            <input type="hidden" name="histogram">
+            <input type="hidden" name="dataset">
+            <i class="dropdown icon"></i>
+            <div class="default text">----</div>
+            <div class="menu">
+                <div class="item" value="ZeroBias">ZeroBias</div>
+                <div class="item" value="SingleMuon">SingleMuon</div>
+                <div class="item" value="EGamma">EGamma</div>
+                <div class="item" value="JetHT">JetHT</div>
+            </div>
+        </div>
+    </div>
+    <div class="field">
+        <label>Variable</label>
+        <div class="ui selection dropdown">
+            <input type="hidden" name="variable">
             <i class="dropdown icon"></i>
             <div class="default text">----</div>
             <div class="menu">
@@ -23,10 +39,38 @@
             </div>
         </div>
     </div>
+    <div class="field">
+        <label>Plot type</label>
+        <div class="ui selection dropdown">
+            <input type="hidden" name="plot_type">
+            <i class="dropdown icon"></i>
+            <div class="default text">----</div>
+            <div class="menu">
+                <div class="item" value="histogram">Histogram</div>
+                <div class="item" value="time_serie">Time Serie</div>
+            </div>
+        </div>
+    </div>
     <button class="ui primary button" type="submit">Select</button>
   </form>
 
 </div>
+
+<hr>
+
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
+  <h2> Here should be an altair plot... </h2>
+
+  <div id="vis"></div>
+
+  <script type="text/javscript">
+    var spec="https://raw.githubusercontent.com/vega/vega/master/docs/examples/bar-chart.vg.json";
+    console.log(spec);
+    vegaEmbed("#vis", spec)
+  </script>
 
 <hr>
 
