--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
   <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,19 +14,27 @@
     <!-- semantic UI -->
     <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-
   
     <title>ML Playground - {% block title %}{% endblock title %}</title>
+
   </head>
   
   <body>
+
     {% include 'navbar.html' %}
+
       <div class='ui container'>
         {% block content %}
         {% endblock content %}
       </div>
-   
+
+    <!-- Javascript -->  
     <script type='text/javascript' src={% static 'main.js' %}></script>
+    <!-- Altair -->
+    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
   </body>
 
 </html>
