Finishing prototype of runhistos view

--- a/run_histos/templates/run_histos/main.html
+++ b/run_histos/templates/run_histos/main.html
@@ -58,7 +58,7 @@
 
 <hr>
 
-  <h2> Histogram </h2>
+  <h2> Plot </h2>
 
   <div id="vis"></div>
 
@@ -67,9 +67,5 @@
     console.log(spec);
     vegaEmbed("#vis", spec)
   </script>
-
-<hr>
-
-{{ df | safe }}
 
 {% endblock content %}
