--- a/runs/templates/runs/main.html
+++ b/runs/templates/runs/main.html
@@ -3,5 +3,13 @@
 {% block title %} Runs {% endblock title %}
 
 {% block content %}
+
+{% if error_message %}
+{{ error_message }}
+{% endif %}
+
+{% if runs %}
 {{ runs | safe }}
+{% endif %}
+
 {% endblock content %}
