Modify templates to load .js files

--- a/run_histos/templates/run_histos/listRunHistos1D.html
+++ b/run_histos/templates/run_histos/listRunHistos1D.html
@@ -35,7 +35,8 @@ List run histograms
 
 
 {% block scripts %}
-    <script src="{% static "run_histos/js/filters.js" %}"></script>
+    {% load static %}
+    <script src="{% static "run_histos/js/filter.js" %}" type="text/javascript"></script>
     <script>
         $(document).ready(function () {
             $("#run_histos-filter-form").submit(function () {
