--- a/templates/basepage/homebase.html
+++ b/templates/basepage/homebase.html
@@ -39,9 +39,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/js/bootstrap-select.min.js"></script>
 
 <!-- Scripts -->
-<!-- {% block scripts %}
+{% block scripts %}
     scripts: Oops. You shouldn't be seeing this.
-{% endblock %} -->
+{% endblock %}
 
 </body>
 </html>
