--- a/templates/base.html
+++ b/templates/base.html
@@ -7,19 +7,22 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!--Custom css-->
     <link rel='stylesheet' type='text/css' href={% static 'style.css' %}>
-    <!-- semantic UI -->
-    <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <!-- Bootstrap 5 -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+        crossorigin="anonymous"
+    >
+
     <!-- Altair -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
-    <title>ML Playground - {% block title %}{% endblock title %}</title>
+    <title>Anomaly Detection Playground - {% block title %}{% endblock title %}</title>
 
   </head>
   
@@ -27,12 +30,26 @@
 
     {% include 'navbar.html' %}
 
-      <div class='ui container'>
+      <div class='container'>
         {% block content %}
         {% endblock content %}
       </div>
 
-    <!-- Javascript -->  
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <!-- Popper JS -->
+    <script 
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" 
+        crossorigin="anonymous">
+    </script>
+    <!-- Bootstrap 5 -->
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
+        crossorigin="anonymous">
+    </script>
+    <!-- My javascript -->
     <script type='text/javascript' src={% static 'main.js' %}></script>
 
   </body>
