Finalizing move from Semantic UI to Bootstrap - Run Histos view working

--- a/run_histos/templates/run_histos/main.html
+++ b/run_histos/templates/run_histos/main.html
@@ -18,24 +18,21 @@
 
   <h2> Choosing Dataset / Variable / Plot type </h2>
 
-<div class="container">
-
-  <div class="dropdown-menu">
     <form action="" method="POST" class="px-4 py-3">
     {% csrf_token %}
       <div class="mb-3">
         <label class="form-label">Dataset</label>
-        <select class="form-select" aria-label="Default select example">
+        <select name="dataset" class="form-select" aria-label="Default select example">
           <option selected>----</option>
-          <option value="ZeroBias">One</option>
-          <option value="SingleMuon">Two</option>
-          <option value="EGamma">Three</option>
-          <option value="EGamma">Three</option>
+          <option value="ZeroBias">ZeroBias</option>
+          <option value="SingleMuon">SingleMuon</option>
+          <option value="EGamma">EGamma</option>
+          <option value="JetHT">JetHT</option>
         </select>
       </div>
       <div class="mb-3">
         <label class="form-label">Variable</label>
-        <select class="form-select" aria-label="Default select example">
+        <select name="variable" class="form-select" aria-label="Default select example">
           <option selected>----</option>
           <option value="Chi2Prob_GenTk">Chi2Prob_GenTk</option>
           <option value="Chi2_GenTk">Chi2_GenTk</option>
@@ -43,7 +40,7 @@
       </div>
       <div class="mb-3">
         <label class="form-label">Plot type</label>
-        <select class="form-select" aria-label="Default select example">
+        <select name="plot_type" class="form-select" aria-label="Default select example">
           <option selected>----</option>
           <option value="histogram">Histogram</option>
           <option value="time_serie">Time Serie</option>
@@ -51,9 +48,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Select</button>
     </form>
-  </div>
 
-</div>
 
 <hr>
 
