--- a/run_histos/templates/run_histos/filter.html
+++ b/run_histos/templates/run_histos/filter.html
@@ -3,52 +3,177 @@
     <div class="card border-light shadow p-3 bg-white rounded mb-4" style="margin: 0 auto 10px; width: 800px;">
         <form id="run_histos-filter-form" action="" method="get" class="form my-1">
             
+            <ul class="nav nav-tabs">
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu-run-numbers">Run Numbers</a></li>
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu-stats">Statistics</a></li>
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu-datasets">Datasets</a></li>
+            </ul>
+            <div class="tab-content">
 
-            <div class="form from-inline">
-                <div class="row top-buffer">
-                    <div class="col-sm-12 text-right">
-                        <input type="checkbox" class="form-check-input ignore-other-filter-checkbox" id="id-ignore-run_number">
-                        <label class="form-check-label no-bold-label" for="id-ignore-run_number">Ignore other filters</label>
-                        <a href="#" data-toggle="tooltip" title="Check if you do not want to apply multiple filters at once (for example a run number range within a specific mean range)" style="color:black;
-text-decoration: none;"></a>
+                <div id="menu-run-numbers" class="tab-pane fade in active show">
+                    <div class="form from-inline">
+
+                        <div class="row top-buffer">
+                            <div class="col-sm-12 text-right">
+                                <input type="checkbox" class="form-check-input ignore-other-filter-checkbox" id="id-ignore-run_number">
+                                <label class="form-check-label no-bold-label" for="id-ignore-run_number">Ignore other filters</label>
+                                <a href="#" data-toggle="tooltip" title="Check if you do not want to apply multiple filters at once (for example a run number range within a specific mean range)" style="color:black;
+        text-decoration: none;"></a>
+                            </div>
+                        </div>
+        
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Run number:</h6>
+                            </div>
+                        </div> 
+                        <div class="row top-buffer">
+                            <div class="col-sm-1"></div>
+                            <div class="col-sm-5">
+                                <strong>from</strong>:
+                            </div>
+                            <div class="col-sm-6">
+                                <strong>to</strong>:
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-5">
+                                {% render_field filter.form.run__run_number__gte|add_class:"form-control" %}
+                            </div>
+                            <div class="col-sm-5">
+                                {% render_field filter.form.run__run_number__lte|add_class:"form-control" %}
+                            </div>
+                        </div>
+        
+                        <div class="row top-buffer d-flex justify-content-center">
+                            <div class="col-sm-10">
+                                <strong>Comma-separated list</strong>:
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-10">
+                                {% render_field filter.form.run__run_number__in|add_class:"form-control" %}
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h6>Run number:</h6>
+                <div id="menu-stats" class="tab-pane fade">
+                    <div class="form from-inline">
+
+                        <div class="row top-buffer">
+                            <div class="col-sm-12 text-right">
+                                <input type="checkbox" class="form-check-input ignore-other-filter-checkbox" id="id-ignore-run_number">
+                                <label class="form-check-label no-bold-label" for="id-ignore-run_number">Ignore other filters</label>
+                                <a href="#" data-toggle="tooltip" title="Check if you do not want to apply multiple filters at once (for example a run number range within a specific mean range)" style="color:black;
+        text-decoration: none;"></a>
+                            </div>
+                        </div>
+         
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-2">
+                                <h6>Mean:</h6>
+                            </div>
+                            <div class="col-sm-2">
+                                <strong>>=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__gte|add_class:"form-control" %}
+                            </div>
+                            <div class="col-sm-2">
+                                <strong><=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__lte|add_class:"form-control" %}
+                            </div>
+                        </div> 
+                        
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-2">
+                                <h6>RMS:</h6>
+                            </div>
+                            <div class="col-sm-2">
+                                <strong>>=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__gte|add_class:"form-control" %}
+                            </div>
+                            <div class="col-sm-2">
+                                <strong><=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__lte|add_class:"form-control" %}
+                            </div>
+                        </div>  
+                        
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-2">
+                                <h6>Skewness:</h6>
+                            </div>
+                            <div class="col-sm-2">
+                                <strong>>=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__gte|add_class:"form-control" %}
+                            </div>
+                            <div class="col-sm-2">
+                                <strong><=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__lte|add_class:"form-control" %}
+                            </div>
+                        </div>  
+                        
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-2">
+                                <h6>Kurtosis:</h6>
+                            </div>
+                            <div class="col-sm-2">
+                                <strong>>=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__gte|add_class:"form-control" %}
+                            </div>
+                            <div class="col-sm-2">
+                                <strong><=</strong>:
+                            </div>
+                            <div class="col-sm-3">
+                                {% render_field filter.form.run__run_number__lte|add_class:"form-control" %}
+                            </div>
+                        </div>  
+                        
                     </div>
-                </div> 
-                <div class="row top-buffer">
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
-                        <strong>from</strong>:
-                    </div>
-                    <div class="col-sm-6">
-                        <strong>to</strong>:
-                    </div>
-                </div>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-sm-5">
-                        {% render_field filter.form.run__run_number__gte|add_class:"form-control" %}
-                    </div>
-                    <div class="col-sm-5">
-                        {% render_field filter.form.run__run_number__lte|add_class:"form-control" %}
-                    </div>
+
+
                 </div>
 
-                <div class="row top-buffer d-flex justify-content-center">
-                    <div class="col-sm-10">
-                        <strong>Comma-separated list</strong>:
+                <div id="menu-datasets" class="tab-pane fade">
+
+                    <div class="row top-buffer">
+                        <div class="col-sm-12 text-right">
+                            <input type="checkbox" class="form-check-input ignore-other-filter-checkbox" id="id-ignore-problem_categories">
+                            <label class="form-check-label no-bold-label" for="id-ignore-problem_categories">Ignore other filters</label>
+                            <a href="#" data-toggle="tooltip" title="Check if you do not want to apply multiple filters at once (for example a run number range within a specific date range)" style="color:black;
+                    text-decoration: none;"></a>
+                        </div>
                     </div>
-                </div>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-sm-10">
-                        {% render_field filter.form.run__run_number__in|add_class:"form-control" %}
+
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h4>Titles available:</h4>
+                        </div>
+                        <div class="col-sm-6 text-right" style="margin-top: 10px">
+                            <a href="#" data-toggle="tooltip" title="use CTRL + Click to select and deselect multiple users" style="color:black;
+    text-decoration: none;">Help</a>
+                        </div>
                     </div>
+                    {% render_field filter.form.title|add_class:"form-control" %}
+
+
                 </div>
+            
             </div>
-
             <div class="row">
                 <hr style="width: 95%; color: lightgray; height: 1px; background-color:lightgray;" />
             </div>
