--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -6,6 +8,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Custom CSS -->
+  <link rel='stylesheet' type='text/css' href={% static 'style.css' %}>
 
   <!-- Bootstrap CSS -->
   <link 
@@ -16,6 +21,7 @@
   >
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/css/bootstrap-select.min.css">
+
   <title> {% block title %}Anomaly Detection Playground{% endblock %}</title>
 
 </head>
@@ -23,8 +29,7 @@
 <body>
 
   <!-- Navigation -->
-  {% load static %}
-  {% include "basepage/menu.html" %}
+  {% include "menu.html" %}
 
   <!-- Page Content -->
   <div class='container base'>
@@ -56,6 +61,9 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
+  <!-- My javascript -->
+  <script type='text/javascript' src={% static 'main.js' %}></script>
 
 </body>
 
