--- a/templates/appbase.html
+++ b/templates/appbase.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/css/bootstrap-select.min.css">
-    <title> {% block title %}Abhit{% endblock %}</title>
+    <title> {% block title %}App base{% endblock %}</title>
 
     {% block style %}{% endblock %}
     {% block head %}{% endblock head %}
@@ -40,9 +40,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/js/bootstrap-select.min.js"></script>
 
 <!-- Scripts -->
-<!-- {% block scripts %}
+{% block scripts %}
     scripts: Oops. You shouldn't be seeing this.
-{% endblock %} -->
+{% endblock %}
 
 </body>
 </html>
