--- a/run_histos/templates/run_histos/filter.html
+++ b/run_histos/templates/run_histos/filter.html
@@ -190,7 +190,7 @@
                                 <h6>Title:</h6>
                             </div>
                             <div class="col-sm-6" style="margin-top: 10px">
-                                <a href="#" data-toggle="tooltip" title="use CTRL + Click to select and deselect multiple users" style="color:black;
+                                <a href="#" data-toggle="tooltip" title="use CTRL + Click to select and deselect multiple titles" style="color:black;
         text-decoration: none;">Help</a>
                                 {% render_field filter.form.title|add_class:"form-control" %}
                             </div>
