--- a/templates/appbase.html
+++ b/templates/appbase.html
@@ -39,6 +39,11 @@
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/js/bootstrap-select.min.js"></script>
 
+<!-- Altair -->
+<script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
 <!-- Scripts -->
 {% block scripts %}
     scripts: Oops. You shouldn't be seeing this.
