Refactoring code - urls standardise

--- a/lumisection_histos1D/templates/lumisection_histos1D/filter.html
+++ b/lumisection_histos1D/templates/lumisection_histos1D/filter.html
@@ -174,7 +174,7 @@
             </div>
             <div class="row">
                 <div class="col col-sm-6 text-left">
-                    <a href="{% url 'lumisection_histos1D:listLumisectionHistos1D' %}" class="btn btn-danger" id="clear-filters">
+                    <a href="{% url 'lumisection_histos1D:list' %}" class="btn btn-danger" id="clear-filters">
                         <span class="glyphicon glyphicon-remove"></span> Reset
                     </a>
                 </div>
