--- a/run_histos/templates/run_histos/filter.html
+++ b/run_histos/templates/run_histos/filter.html
@@ -205,7 +205,7 @@
             </div>
             <div class="row">
                 <div class="col col-sm-6 text-left">
-                    <a href="{% url 'run_histos:listRunHistos1D' %}" class="btn btn-danger" id="clear-filters">
+                    <a href="{% url 'run_histos:list' %}" class="btn btn-danger" id="clear-filters">
                         <span class="glyphicon glyphicon-remove"></span> Reset
                     </a>
                 </div>
