Added vue.js in histogram_file_manager

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -1,5 +1,10 @@
 {% extends 'appbase.html' %}
 {% load static %}
+
+{% block head %}
+<script src="{% static 'js/vue.global.js' %}"></script>
+{% endblock %}
+
 {% block title %}
 Histogram File Manager
 {% endblock %}
