Fixed modal for file actions

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -62,7 +62,7 @@ Histogram File Manager
 		<file-actions
 			:file_information="file_information"
 			:is_visible="file_actions_is_visible"
-			:file_id="file_information.id" 
+			:file_id="Number(file_information.id)" 
 			@clicked-close="hide_file_actions_modal"
 		>
 			
