Added errors Vue component for handling general errors (e.g. axios)

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -8,6 +8,7 @@
 <script src="{% static 'histogram_file_manager/js/histogram_file_manager.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/file_table.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/file_actions.js' %}"></script>
+<script src="{% static 'histogram_file_manager/js/components/errors.js' %}"></script>
 
 <link rel="stylesheet" href="{% static 'histogram_file_manager/css/file_actions.css' %}">
 {% endblock %}
