WIP - API/Frontend pagination

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -64,6 +64,7 @@ Histogram File Manager
 		<table-pagination
 			:page_next="page_next"
 						:page_previous="page_previous"
+			:total_pages="total_pages"
 						@clicked-previous="fetch_previous_result_page"
 						@clicked-next="fetch_next_result_page"			
 		></table-pagination>
