Filtering works(?) on front-end too, cleanup

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -22,40 +22,21 @@ Histogram File Manager
 {% block content %}
 <div class="container-fluid">
 	<h1 class="my-3" align="center">Histogram File Manager</h1>
-
-	{% comment %}
-	<h2>List data files in DB</h2>
-	<ul>
-		{% for df in files_in_db %}
-		<li>
-			{{ df }}
-		</li>
-		{% endfor %}
-	</ul>
-	<br>
-	<h2>Test with form</h2>
-	<form action ="{% url 'histogram_file_manager:file_manager' %}" method="post">
-		{% csrf_token %}
-		{{ form.non_field_errors }}
-		<div class="fieldWrapper">
-			{{ form.filepath.errors }}
-			<label for="{{ form.filepath.id_for_label }}">Filepath:</label>
-			{{ form.filepath }}
-		</div>
-		<input type="submit" value="Submit">
-	</form>
-	<br>
-
-	
-	<h2>Available DQM Histogram files</h2>
-	{% load render_table from django_tables2 %}
-	{% load bootstrap3 %}
-	{% if table %}
-	{% render_table table 'django_tables2/bootstrap.html' %}
-	{% endif %}
-	<br>
-	{% endcomment %}
 	<h2>Available Histogram Files</h2>
+
+	{{ filter.request }}
+	<!-- Filter form -->
+	<div class="card border-light shadow p-3 bg-white rounded mb-4">
+		<form id="file_filter_form" method="get" action="">
+			<div class="form-group">
+				<h5>Filters</h5>
+				{{ filter.form }}
+			</div>
+			<button type="submit" class="btn btn-primary">Apply filters</button>
+		</form>
+	</div>
+
+	<!-- Vue js app -->
 	<div id="app" >
 		<file-table
 			:files_information="files_information"
@@ -88,6 +69,7 @@ Histogram File Manager
 {% block scripts %}
 <script>
  const mountedApp = app.mount('#app');
+ console.log(window.location.search);
 </script>
 
 {% endblock %}
