--- a/templates/base.html
+++ b/templates/base.html
@@ -3,65 +3,52 @@
 <!doctype html>
 <html lang="en">
 
-<head>
+	<head>
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Custom CSS -->
-  <link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
+		<!-- Custom CSS -->
+		<link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
 
-  <!-- Bootstrap CSS -->
-  <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-    crossorigin="anonymous"
-  >
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/css/bootstrap-select.min.css">
-
-  <title> {% block title %}Anomaly Detection Playground{% endblock %}</title>
+		<title> {% block title %}ML Playground{% endblock %}</title>
   
-  <!-- Optional JavaScript -->
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <!-- Popper JS -->
-  <script 
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" 
-    crossorigin="anonymous">
-  </script>
-  <!-- Bootstrap 5 -->
-  <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
-    crossorigin="anonymous">
-  </script>
-  <!-- Altair -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-  {% block extra_head %}
+		<!-- Bootstrap 5 -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+					 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+					 crossorigin="anonymous"
+		>
+		</script>
 
-  {% endblock %}
+		<!-- Altair -->
+		<script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
-</head>
+		<!-- Extra per-template head entries -->
+		{% block extra_head %}
 
-<body>
+		{% endblock %}
 
-  <!-- Navigation -->
-  {% include "menu.html" %}
+	</head>
 
-  <!-- Page Content -->
-  <div class='container base'>
-    {% block content %}
-      content: Oops. You shouldn't be seeing this.
-    {% endblock %}
-  </div>
+	<body>
+
+		<!-- Navigation -->
+		{% include "menu.html" %}
+
+		<!-- Page Content -->
+		<div class='container base'>
+			{% block content %}
+			content: Oops. You shouldn't be seeing this.
+			{% endblock %}
+		</div>
 
 
-</body>
+	</body>
 
 </html>
