--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -24,8 +24,7 @@ Histogram File Manager
 	<h1 class="my-3" align="center">Histogram File Manager</h1>
 	<h2>Available Histogram Files</h2>
 
-	{{ filter.request }}
-	<!-- Filter form -->
+	<!-- Filter form, rendered by django -->
 	<div class="card border-light shadow p-3 bg-white rounded mb-4">
 		<form id="file_filter_form" method="get" action="">
 			<div class="form-group">
